# Oculo

./: .gitignore  2nd.txt  ARCHITECTURE.md  Makefile  README.md  go.mod  index.html  install.sh  prompt.txt
cmd/oculo/: main.go
cmd/oculo-daemon/: main.go
cmd/oculo-tui/: main.go
examples/: sample_agent.py
internal/analysis/: analyzer.go  analyzer_test.go
internal/database/: schema.sql  store.go  store_test.go
internal/ingestion/: daemon.go
internal/protocol/: trace.proto
internal/tui/: detail.go  diffview.go  doc.go  header.go  helpers.go  model.go  theme.go  timeline.go  tracelist.go
pkg/jsonutil/: helpers.go
pkg/timeutil/: format.go
sdk/python/: PUBLISHING.md  README.md  pyproject.toml
sdk/python/oculo/: MANIFEST.in  __init__.py  memory.py  span.py  tracer.py  transport.py
website/: README.md  about.html  blog.html  changelog.html  contact.html  contributors.html  docs.html  installation.html  roadmap.html
website/assets/css/: styles.css
website/assets/js/: main.js
website/components/: animations.js  contributors.html  features.html  footer.html  github-stats.html  hero.html  navbar.html  stats.html
